# nrfadk-hello_codec

./: CMakeLists.txt  Kconfig  README.md  prj.conf
src/: main.c
src/drivers/: CMakeLists.txt  Kconfig  cs47l63_comm.c  cs47l63_comm.h
